nullaway_error_fa33afb6-938a-43c5-a829-a05aaff23a13.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/util/batcher/AcceptorExecutor.java:329: error: [NullAway] dereferenced expression nextHolder is @Nullable
            long delay = System.currentTimeMillis() - nextHolder.getSubmitTimestamp();
                                                                ^
